--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
-    "mongoose": "^4.4.11"
+    "mongoose": "^4.4.11",
+    "passport": "^0.3.2"
   }
 }
