--- a/package.json
+++ b/package.json
@@ -2,7 +2,9 @@
   "dependencies": {
     "body-parser": "^1.15.0",
     "express": "^4.13.4",
+    "jsonwebtoken": "^5.7.0",
     "mongoose": "^4.4.11",
-    "passport": "^0.3.2"
+    "passport": "^0.3.2",
+    "passport-jwt": "^2.0.0"
   }
 }
